--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
+Rogério Sousa (UFG 2022) <rogeriosousa@discente.ufg.br>
 Eduardo Abinader (eduardo.abinader@gmail.com)
 John Abraham (john.abraham.in@gmail.com)
 Danilo Abrignani (dabrignani@gmail.com)
